src/test/deca/context/invalid/our_tests/jb-bad-instanceof1.deca
// Description:
//    Bad left operand for instanceof
//
// Resultats:
//    Should throw contextual error (rule 3.40)
//
// Historique:
//    cree le 23/01/2017

{
    if (1 instanceof Object) {
        println("FAIL");
    } else {
        println("FAIL");
    }
}
